--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,7 @@
 [profile.default]
-src = "src"
-out = "out"
 libs = ["lib"]
+out = "out"
+remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts"]
+src = "src"
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
