--- a/foundry.toml
+++ b/foundry.toml
@@ -4,4 +4,12 @@ out = "out"
 remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts", "@chainlink/contracts=lib/chainlink-brownie-contracts/contracts"]
 src = "src"
 
+[fuzz]
+runs = 128
+
+[invariant]
+depth = 128
+fail_on_revert = true
+runs = 128
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
